# minbpe-cc

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.zig  endtoend-test.sh
.github/workflows/: test.yml
code/: BasicTokenizer.h  BasicTokenizer.hpp  RegexTokenizer.hpp  Tokenizer.cpp  Tokenizer.h  Tokenizer.hpp  basic-tokenizer.cpp  main.cpp
code/examples/: main.cpp  minbpe-cc.cpp  train.cpp
code/include/: BasicTokenizer.hpp  PairCount.h  PairCount.hpp  RegexTokenizer.hpp  Tokenizer.h  Tokenizer.hpp
code/lib/: Tokenizer.cpp
code/test/: test.cpp
data/: sample.txt  small.txt  special1.txt  specialtokensample.txt
docker/: Dockerfile
models/: .gitkeep
